--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 99,
    "id": "b919d9d0",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 100,
    "id": "643602d1",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 101,
    "id": "fddc818f",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
        "[5 rows x 20 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 102,
    "id": "ed851e48",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "(7043, 20)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "id": "b46d82cf",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "id": "329bf068",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "id": "58c2ed3d",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
        "Name: count, Length: 6531, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 106,
    "id": "1cd84b84",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 107,
    "id": "cb5867cc",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
        "[11 rows x 20 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 108,
    "id": "3a6d3748",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
        "(7032, 20)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 109,
    "id": "0dc75f2b",
    "metadata": {},
    "outputs": [
@@ -959,7 +959,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 110,
    "id": "50202530",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1149,7 @@
        "[5 rows x 20 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 111,
    "id": "ef64161e",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1181,7 @@
        "Name: tenure, Length: 1869, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 112,
    "id": "7fdf13be",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1216,7 @@
        "Name: tenure, Length: 5163, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,17 +1227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 113,
    "id": "7baa3cb3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x78d571f2a090>"
+       "<matplotlib.legend.Legend at 0x78d570a2b320>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1263,11 +1263,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "944fec85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# encoding categorical variables\n",
+    "def print_cat_vars(data):\n",
+    "    for column in data:\n",
+    "        if data[column].dtypes == \"object\":\n",
+    "            print(f\"{column} : {data[column].unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "410b497a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gender : ['Female' 'Male']\n",
+      "Partner : ['Yes' 'No']\n",
+      "Dependents : ['No' 'Yes']\n",
+      "PhoneService : ['No' 'Yes']\n",
+      "MultipleLines : ['No phone service' 'No' 'Yes']\n",
+      "InternetService : ['DSL' 'Fiber optic' 'No']\n",
+      "OnlineSecurity : ['No' 'Yes' 'No internet service']\n",
+      "OnlineBackup : ['Yes' 'No' 'No internet service']\n",
+      "DeviceProtection : ['No' 'Yes' 'No internet service']\n",
+      "TechSupport : ['No' 'Yes' 'No internet service']\n",
+      "StreamingTV : ['No' 'Yes' 'No internet service']\n",
+      "StreamingMovies : ['No' 'Yes' 'No internet service']\n",
+      "Contract : ['Month-to-month' 'One year' 'Two year']\n",
+      "PaperlessBilling : ['Yes' 'No']\n",
+      "PaymentMethod : ['Electronic check' 'Mailed check' 'Bank transfer (automatic)'\n",
+      " 'Credit card (automatic)']\n",
+      "Churn : ['No' 'Yes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_cat_vars(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "53e9ca9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.replace(\"No internet service\", \"No\")\n",
+    "data = data.replace(\"No phone service\", \"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "75ca58d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gender : ['Female' 'Male']\n",
+      "Partner : ['Yes' 'No']\n",
+      "Dependents : ['No' 'Yes']\n",
+      "PhoneService : ['No' 'Yes']\n",
+      "MultipleLines : ['No' 'Yes']\n",
+      "InternetService : ['DSL' 'Fiber optic' 'No']\n",
+      "OnlineSecurity : ['No' 'Yes']\n",
+      "OnlineBackup : ['Yes' 'No']\n",
+      "DeviceProtection : ['No' 'Yes']\n",
+      "TechSupport : ['No' 'Yes']\n",
+      "StreamingTV : ['No' 'Yes']\n",
+      "StreamingMovies : ['No' 'Yes']\n",
+      "Contract : ['Month-to-month' 'One year' 'Two year']\n",
+      "PaperlessBilling : ['Yes' 'No']\n",
+      "PaymentMethod : ['Electronic check' 'Mailed check' 'Bank transfer (automatic)'\n",
+      " 'Credit card (automatic)']\n",
+      "Churn : ['No' 'Yes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_cat_vars(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "6b1f3113",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_14676/4230362861.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  data[col].replace(\n",
+      "/tmp/ipykernel_14676/4230362861.py:18: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data[col].replace(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# encoding columns with yes or np\n",
+    "yes_no_columns = [\n",
+    "    \"Partner\",\n",
+    "    \"Dependents\",\n",
+    "    \"PhoneService\",\n",
+    "    \"MultipleLines\",\n",
+    "    \"OnlineSecurity\",\n",
+    "    \"OnlineBackup\",\n",
+    "    \"DeviceProtection\",\n",
+    "    \"TechSupport\",\n",
+    "    \"StreamingTV\",\n",
+    "    \"StreamingMovies\",\n",
+    "    \"PaperlessBilling\",\n",
+    "    \"Churn\"\n",
+    "]\n",
+    "\n",
+    "for col in yes_no_columns:\n",
+    "    data[col].replace(\n",
+    "        {\"Yes\" : 1, \"No\": 0},\n",
+    "        inplace=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "02a311a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_14676/1022046660.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data[\"gender\"].replace(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "1    3549\n",
+       "0    3483\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# encoding male and female\n",
+    "data[\"gender\"].replace(\n",
+    "    {\"Male\": 1, \"Female\": 0},\n",
+    "    inplace=True\n",
+    ")\n",
+    "data[\"gender\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7a0a378",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# encoding  internet service, contract, payment methods"
+   ]
   }
  ],
  "metadata": {
